--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    background-color: #333;
+    background-color: rgb(2, 47, 68);
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -34,8 +34,8 @@ h1 {
     font-weight: bold;
 }
 .key.active {
-    border: 2px solid #FF0;
-    color: #FF0;
+    border: 2px solid rgb(255, 0, 106);
+    color: rgb(255, 0, 106)
 }
 
 .composer {
