--- a/style.css
+++ b/style.css
@@ -9,7 +9,8 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    background-color: rgb(2, 47, 68);
+    background-image: url();
+    background-color: orangered;
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -34,8 +35,8 @@ h1 {
     font-weight: bold;
 }
 .key.active {
-    border: 2px solid rgb(255, 0, 106);
-    color: rgb(255, 0, 106)
+    border: 2px solid rgb(0, 255, 157);
+    color: rgb(0, 255, 157);
 }
 
 .composer {
