--- a/style.css
+++ b/style.css
@@ -3,19 +3,21 @@
     padding: 0;
     box-sizing: border-box;
 }
+
 body {
     display: flex;
     min-height: 100vh;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    background-image: url();
-    background-color: orangered;
+    background-image: url("/assets/img/bg.jpg");
+    background-position: center;
     font-family: Arial, Helvetica, sans-serif;
+    
 }
 
 h1 {
-    color: #FFF;
+    color: rgb(231, 112, 1);
     margin-bottom: 20px;
 }
 .keys {
@@ -26,8 +28,8 @@ h1 {
 .key {
     width: 80px;
     height: 80px;
-    border: 2px solid #FFF;
-    color: #FFF;
+    border: 2px solid rgb(231, 112, 1);
+    color: rgb(231, 112, 1);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -35,8 +37,8 @@ h1 {
     font-weight: bold;
 }
 .key.active {
-    border: 2px solid rgb(0, 255, 157);
-    color: rgb(0, 255, 157);
+    border: 2px solid rgb(5, 241, 151);
+    color: rgb(5, 241, 151);
 }
 
 .composer {
@@ -53,9 +55,10 @@ h1 {
     width: 100%;
     height: 40px;
     background: none;
-    border: 2px solid #FFF;
-    color: #FFF;
+    border: 2px solid rgb(231, 112, 1);
+    color: rgb(231, 112, 1);
     font-size: 16px;
+    font-weight: 600;
     margin-top: 10px;
     cursor: pointer;
 }
